include $(top_srcdir)/build/common.mk

SUBDIRS = tests

lib_LTLIBRARIES = libibpp.la
libibpp_la_SOURCES = \
    catch.cpp \
    engine.cpp \
    data.cpp \
    module.cpp \
    context.cpp \
    module_bootstrap.cpp \
    module_delegate.cpp \
    throw.cpp \
    memory_pool.cpp \
    byte_string.cpp \
    field.cpp

